# zsh-module-rs

./: CHANGELOG.md  README.md
zsh-module/: Cargo.toml
zsh-module/src/: lib.rs  log.rs
zsh-module/src/types/: string_array.rs
zsh-module/src/zsh/: param.rs
zsh-sys/: Cargo.toml
zsh-sys/headers/doc/: paramdef.md
