[package]
name = "zsh-sys"
version = "0.1.1"
edition = "2021"
description = "Low-level bindings to zsh internals"
license = "MIT"
repository = "https://github.com/tobiashochguertel/zsh-module-rs"
homepage = "https://github.com/tobiashochguertel/zsh-module-rs"
documentation = "https://docs.rs/zsh-sys"
keywords = ["zsh", "shell", "ffi", "bindings"]
categories = ["external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = '0.69.2'
